feat(Navbar website, DokumentasiSeeder, Sidebar): Membuat navbar yang lebih lebar pada website, menambahkan filter_id pada dokumentasiseeder, membuat sidebar dan navbar berita menjadi active)

--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -37,3 +37,10 @@
 .modal-body h6 {
   font-weight: bold;
 }
+
+.dropdown-item.active {
+  font-weight: bold;
+  color: green; /* Mengubah warna teks menjadi hijau */
+  background-color: transparent; /* Warna latar belakang (bisa disesuaikan) */
+}
+
